[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/script_menu.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.4486, 18.773 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="ColorRect" parent="."]
margin_left = 21.3575
margin_top = 13.3484
margin_right = 1001.36
margin_bottom = 579.348
color = Color( 0.145098, 0.133333, 0.133333, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fase 1" type="Area2D" parent="Fundo"]

[node name="color_fase1" type="ColorRect" parent="Fundo/Fase 1"]
margin_left = 83.0609
margin_top = 309.591
margin_right = 123.061
margin_bottom = 349.591
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fase1" type="RichTextLabel" parent="Fundo/Fase 1"]
margin_left = 84.9487
margin_top = 354.897
margin_right = 124.949
margin_bottom = 394.897
text = "FASE 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fundo/Fase 1"]
position = Vector2( 102.816, 329.479 )
shape = SubResource( 1 )

[node name="Fase 2" type="Area2D" parent="Fundo"]

[node name="color_fase2" type="ColorRect" parent="Fundo/Fase 2"]
margin_left = 254.846
margin_top = 309.591
margin_right = 294.846
margin_bottom = 349.591
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fase2" type="RichTextLabel" parent="Fundo/Fase 2"]
margin_left = 258.622
margin_top = 356.785
margin_right = 298.622
margin_bottom = 396.785
text = "FASE 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Fundo/Fase 2"]
position = Vector2( 272.307, 331.04 )
shape = SubResource( 1 )

[node name="Fase 3" type="Area2D" parent="Fundo"]

[node name="color_fase3" type="ColorRect" parent="Fundo/Fase 3"]
margin_left = 547.447
margin_top = 302.04
margin_right = 587.447
margin_bottom = 342.04
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_fase3" type="RichTextLabel" parent="Fundo/Fase 3"]
margin_left = 549.335
margin_top = 345.458
margin_right = 589.335
margin_bottom = 385.458
text = "FASE 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Fundo/Fase 3"]
position = Vector2( 563.302, 323.031 )
shape = SubResource( 1 )

[node name="Iniciar" type="Button" parent="."]
margin_left = 505.0
margin_top = 437.0
margin_right = 609.0
margin_bottom = 480.0
text = "INICIAR"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="Fundo/Fase 1" to="." method="selec_fase1"]
[connection signal="input_event" from="Fundo/Fase 2" to="." method="selec_fase2"]
[connection signal="input_event" from="Fundo/Fase 3" to="." method="selec_fase3"]
[connection signal="pressed" from="Iniciar" to="." method="iniciar_jogo"]
